# aap-lv2

./: .gitignore  .gitmodules  Makefile  README.md  build.gradle  build.gradle.kts  gradle.properties  import-guitarix-deps.sh  import-lv2-deps.sh  publish-pom.gradle  rewrite-pkg-config-paths.sh  settings.gradle  setup-asan-for-debugging.sh  setup-hackable-environment.sh  sfizz-android.patch
.github/workflows/: actions.yml  build-dist-app.yml  deploy.yml
aap-ayumi/: build.gradle
aap-ayumi/src/androidTest/java/org/androidaudioplugin/aap_ayumi/: MidiDeviceServiceTest.kt  PluginTest.kt
aap-ayumi/src/androidTest/java/org/androidaudioplugin/samples/aap_sfizz/: ExampleInstrumentedTest.kt
aap-ayumi/src/main/: AndroidManifest.xml  CMakeLists.txt
aap-ayumi/src/main/assets/lv2/ayumi.lv2/: ayumi-lv2.ttl  manifest.ttl
aap-ayumi/src/main/cpp/: CMakeLists.txt
aap-ayumi/src/main/res/values/: strings.xml  styles.xml
aap-ayumi/src/main/res/xml/: aap_metadata.xml  midi_device_info.xml  ump_device_info.xml
aap-ayumi/src/test/java/org/androidaudioplugin/samples/aap_sfizz/: ExampleUnitTest.kt
aap-fluidsynth/: build.gradle
aap-fluidsynth/src/main/: AndroidManifest.xml  CMakeLists.txt  fluid_androidasset.h  fluidsynth-lv2.cpp
aap-fluidsynth/src/main/assets/lv2/aap-fluidsynth.lv2/: aap-fluidsynth.ttl  manifest.ttl
aap-fluidsynth/src/main/include/: README-AAP.md
aap-fluidsynth/src/main/include/fluidsynth/: version.h
aap-fluidsynth/src/main/res/values/: strings.xml
aap-fluidsynth/src/main/res/xml/: aap_metadata.xml
aap-guitarix/: build.gradle
aap-guitarix/src/androidTest/java/org/androidaudioplugin/aappluginsample/: ExampleInstrumentedTest.kt
aap-guitarix/src/main/: AndroidManifest.xml
aap-guitarix/src/main/res/values/: strings.xml
aap-mda-lv2/: CMakeLists.txt  build.gradle
aap-mda-lv2/src/main/: AndroidManifest.xml
aap-mda-lv2/src/main/res/values/: strings.xml
aap-mda-lv2/src/test/java/org/androidaudioplugin/aappluginsample/: ExampleUnitTest.kt
aap-sfizz/: .gitignore  build.gradle
aap-sfizz/src/main/: AndroidManifest.xml
aap-sfizz/src/main/java/org/androidaudioplugin/samples/aap_sfizz/: SfzSetupActivity.kt
aap-sfizz/src/main/res/layout/: sfz_setup.xml
aap-sfizz/src/main/res/values/: strings.xml
aap-sfizz/src/main/res/xml/: aap_metadata.xml
aappluginsample/: CMakeLists.txt  build.gradle
aappluginsample/src/main/: AndroidManifest.xml
androidaudioplugin-lv2/: build.gradle
androidaudioplugin-lv2/src/main/cpp/: .gitignore  CMakeLists.txt
androidaudioplugin-lv2/src/main/cpp/src/: AudioPluginLV2LocalHost_jni.cpp  AudioPluginLV2LocalHost_native.cpp  aap-lv2-extensions.cpp  aap-lv2-internal.h  abstract_io.c  abstract_io.h  android-audio-plugin-lv2-bridge.cpp  cmidi2.h  lv2-midi2.h  std_workaround.c  std_workaround.h
androidaudioplugin-lv2/src/main/cpp/src/zix/: sem.h  thread.h
androidaudioplugin-lv2/src/main/java/org/androidaudioplugin/lv2/: AudioPluginLV2ServiceExtension.kt
dependencies/: .gitignore  lilv_config.h  serd_config.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mda_lv2_plugins/src/main/: AndroidManifest.xml
tools/aap-import-lv2-metadata/: CMakeLists.txt  aap-import-lv2-metadata.cpp
